cosmic-whale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cosmic-whale
  name: cosmic-whale
  namespace: star-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cosmic-whale
  template:
    metadata:
      labels:
        app: cosmic-whale
    spec:
      containers:
      - name: cosmic-whale
        image: notmiddev30/cosmic-whale-new:0.1
        securityContext:
          runAsUser: 20000
          allowPrivilegeEscalation: false
