pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: space-sentry
  namespace: kube-ship-system
spec:
  containers:
  - name: httpd-container
    image: httpd:2.4.41-alpine
