nebula-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: nebula
  namespace: starblaze
spec:
  type: NodePort
  selector:
    app: starblaze-app   # Assuming 'app' is the correct label for selector
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8080     # Assuming 8080 is the port your application listens on
