nebula-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nebula
  namespace: starblaze
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: starblaze-deployment
