service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: orion-station-svc
  namespace: galactix
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx  # This should match the labels of the pods in the Deployment
  type: ClusterIP
